# MODEL_DEPLOYER

./: .env.example  .gitignore  README.md  conftest.py  pipeline.py  pyproject.toml  pytest.ini  requirements.txt
api_keys/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
api_keys/migrations/: 0001_initial.py  0002_initial.py
api_keys/tests/: test_api_keys_api.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_auth_api.py
config/: settings.py  settings_test.py  urls.py
core/: container_manager.py  middleware.py  responses.py  urls.py
deployments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
deployments/migrations/: 0001_initial.py  0002_initial.py
deployments/tests/: test_deployment_api.py  test_deployment_state_machine.py
model_registry/: admin.py  models.py  serializers.py  urls.py  views.py
model_registry/migrations/: 0001_initial.py  0002_initial.py
model_registry/tests/: test_upload_api.py
monitoring/: admin.py  models.py  urls.py  views.py
monitoring/migrations/: 0001_initial.py  0002_initial.py
monitoring/tests/: test_dashboard_api.py  test_health_api.py  test_metrics_api.py
prediction_gateway/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
prediction_gateway/migrations/: 0001_initial.py  0002_initial.py
prediction_gateway/tests/: test_predict_api.py
templates/webapp/: auth.html  dashboard.html  home.html  model_detail.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
webapp/: urls.py  views.py
(+1 files in other folders)
